<resources>
    <string name="app_name">CafeApp</string>
    <string name="reviewButton">Review Order</string>
    <string name="storeOrderButton">Store Orders</string>
    <string name="DonutOrderingTitle">Donut Ordering</string>
    <string name="flavorLabel">Select Flavor</string>
    <string name="donutCountLabel">Select Quantity</string>
    <string name="addDonutButton">Add to Order</string>
    <string name="donutReview">Review Order</string>
    <string name="smallCoffee">Short</string>
    <string name="mediumCoffee">Tall</string>
    <string name="largeCoffee">Grande</string>
    <string name="ventiCoffee">Venti</string>
    <string name="sizeLabelText">Select Coffee Size</string>
    <string name="cream">Cream</string>
    <string name="syrup">Syrup</string>
    <string name="milk">Milk</string>
    <string name="caramel">Caramel</string>
    <string name="whippedCream">Whipped Cream</string>
    <string name="addCoffee">Add coffee to order</string>
    <string name="addIns">Select addins, $0.20 each</string>
    <string name="subtotalTag">Subtotal: $</string>
    <string name="subtotal">1.39</string>
    <string name="remove">Remove</string>
    <string name="placeOrder">Place Order</string>
    <string name="orderInstructionText">Click an item to remove it</string>
    <string name="addToStore">Finalize Order</string>
    <string name="userOrderInstruction">Click an item to remove</string>
    <string name="storeRemoveBtn">Remove Order</string>
    <string name="donutOrderLabel">Press to add selected donuts to order</string>
    <string name="donutReviewText">Press to review and finalize order</string>
    <string name="donutSub">Subtotal: $</string>
    <string name="subDonutTotal">0.00</string>
    <string name="userSubView">Subtotal</string>
    <string name="userSubString">0.00</string>
    <string name="TaxView">Tax</string>
    <string name="taxString">0.00</string>
    <string name="totalString">Total</string>
    <string name="totalValue">0.00</string>
    <string name="storeOrderLabel">Tap and item to remove</string>
    <string name="donutInstructions">Select flavor and quantity, then press add button to add to order. When finished ordering return using back arrow.</string>
    <string name="mainMenuInstrucion">Tap image to order that item</string>
    <string-array name="donutArray">
        <item>Chocolate</item>
        <item>Glazed</item>
        <item>Boston Cream</item>
        <item>Bear Claw</item>
        <item>Plain</item>
        <item>Powdered Sugar</item>
    </string-array>
    <string-array name="count">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
    </string-array>
</resources>