<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderingDonutActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="156dp"
        android:text="@string/DonutOrderingTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/donutSpinner"
        android:layout_width="195dp"
        android:layout_height="42dp"
        android:layout_marginTop="288dp"
        android:layout_marginEnd="152dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView" />

    <Spinner
        android:id="@+id/donutQuantitySpinner"
        android:layout_width="127dp"
        android:layout_height="44dp"
        android:layout_marginTop="316dp"
        android:layout_marginEnd="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="124dp"
        android:layout_marginBottom="32dp"
        android:text="@string/flavorLabel"
        app:layout_constraintBottom_toTopOf="@+id/donutSpinner"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:text="@string/donutCountLabel"
        app:layout_constraintBottom_toTopOf="@+id/donutQuantitySpinner"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/addDonutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="28dp"
        android:onClick="addDonut"
        android:text="@string/addDonutButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/reviewDonutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="28dp"
        android:onClick="reviewOrder"
        android:text="@string/donutReview"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/orderLabel"
        android:layout_width="157dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/donutOrderLabel"
        app:layout_constraintBottom_toTopOf="@+id/addDonutBtn"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/donutReviewLabel"
        android:layout_width="130dp"
        android:layout_height="37dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="16dp"
        android:text="@string/donutReviewText"
        app:layout_constraintBottom_toTopOf="@+id/reviewDonutBtn"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/donutSubtotalLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="64dp"
        android:text="@string/donutSub"
        app:layout_constraintBottom_toTopOf="@+id/donutReviewLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/subtotalDonut"
        android:layout_width="61dp"
        android:layout_height="27dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="56dp"
        android:text="@string/subDonutTotal"
        app:layout_constraintBottom_toTopOf="@+id/donutReviewLabel"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="241dp"
        android:layout_height="79dp"
        android:layout_marginTop="104dp"
        android:layout_marginEnd="84dp"
        android:text="@string/donutInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />
</androidx.constraintlayout.widget.ConstraintLayout>