<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserOrder">

    <ListView
        android:id="@+id/userOrderListView"
        android:layout_width="411dp"
        android:layout_height="515dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.222" />

    <Button
        android:id="@+id/addToStoreOrders"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="16dp"
        android:onClick="finalizeOrder"
        android:text="@string/addToStore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/userOrderText"
        android:layout_width="172dp"
        android:layout_height="22dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="120dp"
        android:text="@string/userOrderInstruction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/userOrderSubLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="132dp"
        android:text="@string/userSubView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/userSubValue"
        android:layout_width="50dp"
        android:layout_height="31dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="100dp"
        android:text="@string/userSubString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/taxView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginBottom="132dp"
        android:text="@string/TaxView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userOrderSubLabel" />

    <TextView
        android:id="@+id/taxValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="7dp"
        android:text="@string/taxString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/userSubValue"
        app:layout_constraintTop_toBottomOf="@+id/taxView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/totalView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginBottom="132dp"
        android:text="@string/totalString"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/taxView" />

    <TextView
        android:id="@+id/totalValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="4dp"
        android:text="@string/totalValue"
        app:layout_constraintStart_toEndOf="@+id/taxValue"
        app:layout_constraintTop_toBottomOf="@+id/totalView" />
</androidx.constraintlayout.widget.ConstraintLayout>